--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
     "concurrently": "4.1.0",
+    "eslint": "^8.26.0",
     "nodemon": "1.19.1"
   },
   "engines": {
